<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#2B2738"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/login_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_top"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#D4D1DF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etProfileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textStyle="bold"
        android:textColor="#D4D1DF"
        android:textColorHint="#7B7980"
        android:inputType="textPersonName"
        android:hint="@string/user_name"
        android:autofillHints="name"
        app:layout_constraintTop_toBottomOf="@id/login_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textStyle="bold"
        android:textColor="#D4D1DF"
        android:textColorHint="#7B7980"
        android:inputType="textPassword"
        android:hint="@string/user_password"
        android:autofillHints="password"
        app:layout_constraintTop_toBottomOf="@id/etProfileName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnLoginDetails"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/login_button"
        android:textStyle="bold"
        android:textColor="#2B2738"
        android:backgroundTint="#D4D1DF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>