<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDB67942"
    tools:context=".activities.RecipeDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/not_starred"
                    android:layout_width="42dp"
                    android:layout_height="35dp"
                    android:src="@android:drawable/btn_star_big_off"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:layout_editor_absoluteX="338dp"
                    tools:layout_editor_absoluteY="1dp" />

                <ImageView
                    android:id="@+id/starred"
                    android:layout_width="42dp"
                    android:layout_height="35dp"
                    android:src="@android:drawable/btn_star_big_on"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:layout_editor_absoluteX="338dp"
                    tools:layout_editor_absoluteY="1dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/recipe_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/recipe_name"
                android:textColor="#D8C8BC"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/cuisine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/cuisine"
                android:textColor="#D8C8BC"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recipe_cuisine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="#D8C8BC"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ingredients"
                android:textColor="#D8C8BC"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recipe_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="#D8C8BC"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/recipe"
                android:textColor="#D8C8BC"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recipe_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="#D8C8BC"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cooking_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/cooking_time"
                android:textColor="#D8C8BC"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recipe_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="#D8C8BC"
                android:textSize="18sp" />

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpager2"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_centerInParent="true"/>

            <LinearLayout
                android:id="@+id/slider_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/viewpager2"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="-16dp"
                android:layout_marginBottom="40dp" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>